# SETR_Assignment3

./: .gitignore  CMakeLists.txt  README.md  config_file  prj.conf
libs/: CMakeLists.txt  movie.c  movie.h
src/: main.c
